@@ -495,7 +495,7 @@
     ],
     "iconIndex": 577,
     "name": "Bloodlust",
-    "note": "<Upgrade Slots: 1>\n<Weapon Image: 206>\n<Cannot Discard>\n<Equip Requirement>\nclass: Rogue\n</Equip Requirement>",
+    "note": "<Upgrade Slots: 1>\n<Weapon Image: 206>\n<HP Life Steal Physical: +2%>\n<Cannot Discard>\n<Equip Requirement>\nclass: Rogue\n</Equip Requirement>",
     "params": [
       0,
       0,
