@@ -266,6 +266,9 @@ Balancing:
  - Nerfed Mana Refund's return to 1% of damage dealt (was originally 5%).
  - Nerfed Foresight's MP cost to 12 MP (was originally 8 MP).
  - Increased price of Metal Wristbraces ★ from 180B to 300B.
+ - Gave Bloodlust +2% PLS.
+ - Nerfed CRI of Red Mask from +2% to +1%.
+ - Reworked Blood-Red Headband to grant +0.5% PLS and +3 AGI rather than +4% MHP and +3% CRI. Price has increased from 80B to 120B
  - Buffed the drop chance of rare enemy accessories from 1/3 to 1/2.
  - Ethers no longer require Bits to craft. Their price has been adjusted accordingly.
  - Buffed the Knight's Greaves' DEF by 1 and AGI by 2 and also gave them +0.5% EVA and +0.5% CRI to be able to compete with the Leather Boots.
